--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -22,21 +22,21 @@
 --   bq_gardener_dates_fully_parsed_last_90_days     -- Number of dates fully parsed within last 90 days.
 
 WITH all_types AS (
-    SELECT
-        "ndt/ndt7" AS datatype,
-        id,
-        date,
-        parser.Time as parseTime,
-    FROM
-       `{{PROJECT}}.raw_ndt.ndt7`
-    UNION ALL
-    SELECT
-        "ndt/annotation" AS datatype,
-        id,
-        date,
-        parser.Time as parseTime,
-    FROM
-       `{{PROJECT}}.raw_ndt.annotation`
+  SELECT
+    "ndt/ndt7" AS datatype,
+    id,
+    date,
+    parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.raw_ndt.ndt7`
+  UNION ALL
+  SELECT
+    "ndt/annotation" AS datatype,
+    id,
+    date,
+    parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.raw_ndt.annotation`
 ),
 
 basic_stats AS (
@@ -46,10 +46,9 @@ basic_stats AS (
     COUNT(id) AS rowCount,
     MAX(parseTime) AS max_parse_time,
     MIN(parseTime) AS min_parse_time,
-    TIMESTAMP_DIFF(CURRENT_TIMESTAMP(), MAX(parseTime), HOUR) AS latest_age_hours,
-    TIMESTAMP_DIFF(CURRENT_TIMESTAMP(), MIN(parseTime), HOUR) AS earliest_age_hours,
-    TIMESTAMP_DIFF(MAX(parseTime), MIN(parseTime), HOUR) AS parse_span_hours,
-    TIMESTAMP_DIFF(MAX(parseTime), MIN(parseTime), HOUR) > 48 AS stale_archives,
+    TIMESTAMP_DIFF(CURRENT_TIMESTAMP(), MAX(parseTime), HOUR) AS age_of_latest_parse,
+    TIMESTAMP_DIFF(CURRENT_TIMESTAMP(), MIN(parseTime), HOUR) AS age_of_earliest_parse,
+    TIMESTAMP_DIFF(MAX(parseTime), MIN(parseTime), HOUR) > 48 AS has_stale_archives,
     DATE_DIFF(CURRENT_DATE(), date, DAY) <= 4 AS last_4_dates,
     DATE_DIFF(CURRENT_DATE(), date, DAY) <= 30 AS last_30_dates,
   FROM
@@ -58,28 +57,26 @@ basic_stats AS (
 )
 
 SELECT
-    datatype,
-    COUNT(date) AS value_total_dates,
-    MAX(latest_age_hours) AS value_max_parse_age,
-    MAX(earliest_age_hours) AS value_max_stale_age,
+  datatype,
+  COUNT(date) AS value_total_dates,
 
-    CAST(SAFE_DIVIDE(SUM(IF(last_4_dates, rowCount, 0)),
-                     COUNTIF(last_4_dates)) AS INT64) AS value_rows_per_date_last_4_dates,
-    CAST(SAFE_DIVIDE(SUM(IF(last_30_dates, rowCount, 0)),
-                     COUNTIF(last_30_dates)) AS INT64) AS value_rows_per_date_last_30_dates,
+  CAST(SAFE_DIVIDE(SUM(IF(last_4_dates, rowCount, 0)),
+                   COUNTIF(last_4_dates)) AS INT64) AS value_rows_per_date_last_4_dates,
+  CAST(SAFE_DIVIDE(SUM(IF(last_30_dates, rowCount, 0)),
+                   COUNTIF(last_30_dates)) AS INT64) AS value_rows_per_date_last_30_dates,
 
-    COUNTIF(latest_age_hours < 96 AND last_4_dates) AS value_daily_done_last_4_days,
+  COUNTIF(age_of_latest_parse < 96 AND last_4_dates) AS value_daily_done_last_4_days,
 
-    COUNTIF(parse_span_hours > 48) AS value_dates_partially_parsed,
-    COUNTIF(stale_archives AND earliest_age_hours < 24) AS value_dates_partially_parsed_last_day,
-    COUNTIF(stale_archives AND earliest_age_hours < 7*24) AS value_dates_partially_parsed_last_7_days,
-    COUNTIF(stale_archives AND earliest_age_hours < 30*24) AS value_dates_partially_parsed_last_30_days,
-    COUNTIF(stale_archives AND earliest_age_hours < 90*24) AS value_dates_partially_parsed_last_90_days,
+  COUNTIF(has_stale_archives) AS value_dates_partially_parsed,
+  COUNTIF(has_stale_archives AND age_of_earliest_parse < 24) AS value_dates_partially_parsed_last_day,
+  COUNTIF(has_stale_archives AND age_of_earliest_parse < 7*24) AS value_dates_partially_parsed_last_7_days,
+  COUNTIF(has_stale_archives AND age_of_earliest_parse < 30*24) AS value_dates_partially_parsed_last_30_days,
+  COUNTIF(has_stale_archives AND age_of_earliest_parse < 90*24) AS value_dates_partially_parsed_last_90_days,
 
-    COUNTIF(NOT stale_archives AND earliest_age_hours < 24) AS value_dates_fully_parsed_last_day,
-    COUNTIF(NOT stale_archives AND earliest_age_hours < 7*24) AS value_dates_fully_parsed_last_7_days,
-    COUNTIF(NOT stale_archives AND earliest_age_hours < 30*24) AS value_dates_fully_parsed_last_30_days,
-    COUNTIF(NOT stale_archives AND earliest_age_hours < 90*24) AS value_dates_fully_parsed_last_90_days,
+  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 24) AS value_dates_fully_parsed_last_day,
+  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 7*24) AS value_dates_fully_parsed_last_7_days,
+  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 30*24) AS value_dates_fully_parsed_last_30_days,
+  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 90*24) AS value_dates_fully_parsed_last_90_days,
 FROM
   basic_stats
 GROUP BY datatype
