add update label to force pod update

--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         run: bigquery-exporter
+        # Update this string to trigger redeployment, or delete the pod.
+        update: '2020-08-20-a'
       annotations:
         prometheus.io/scrape: 'true'
     spec:
