--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -47,8 +47,8 @@ basic_stats AS (
     MAX(parseTime) AS max_parse_time,
     MIN(parseTime) AS min_parse_time,
     TIMESTAMP_DIFF(CURRENT_TIMESTAMP(), MAX(parseTime), HOUR) AS age_of_latest_parse,
-    TIMESTAMP_DIFF(CURRENT_TIMESTAMP(), MIN(parseTime), HOUR) AS age_of_earliest_parse,
-    TIMESTAMP_DIFF(MAX(parseTime), MIN(parseTime), HOUR) > 48 AS has_stale_archives,
+    # Rows parsed more than 2 days earlier than the last parse are considered stale.
+    TIMESTAMP_DIFF(MAX(parseTime), MIN(parseTime), HOUR) > 48 AS has_stale_rows,
     DATE_DIFF(CURRENT_DATE(), date, DAY) <= 4 AS last_4_dates,
     DATE_DIFF(CURRENT_DATE(), date, DAY) <= 30 AS last_30_dates,
   FROM
@@ -65,18 +65,18 @@ SELECT
   CAST(SAFE_DIVIDE(SUM(IF(last_30_dates, rowCount, 0)),
                    COUNTIF(last_30_dates)) AS INT64) AS value_rows_per_date_last_30_dates,
 
-  COUNTIF(age_of_latest_parse < 96 AND last_4_dates) AS value_daily_done_last_4_days,
+  COUNTIF(age_of_latest_parse < 4*24 AND last_4_dates) AS value_daily_done_last_4_days,
 
-  COUNTIF(has_stale_archives) AS value_dates_partially_parsed,
-  COUNTIF(has_stale_archives AND age_of_earliest_parse < 24) AS value_dates_partially_parsed_last_day,
-  COUNTIF(has_stale_archives AND age_of_earliest_parse < 7*24) AS value_dates_partially_parsed_last_7_days,
-  COUNTIF(has_stale_archives AND age_of_earliest_parse < 30*24) AS value_dates_partially_parsed_last_30_days,
-  COUNTIF(has_stale_archives AND age_of_earliest_parse < 90*24) AS value_dates_partially_parsed_last_90_days,
+  COUNTIF(has_stale_rows) AS value_dates_partially_parsed,
+  COUNTIF(has_stale_rows AND age_of_latest_parse < 24) AS value_dates_partially_parsed_last_day,
+  COUNTIF(has_stale_rows AND age_of_latest_parse < 7*24) AS value_dates_partially_parsed_last_7_days,
+  COUNTIF(has_stale_rows AND age_of_latest_parse < 30*24) AS value_dates_partially_parsed_last_30_days,
+  COUNTIF(has_stale_rows AND age_of_latest_parse < 90*24) AS value_dates_partially_parsed_last_90_days,
 
-  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 24) AS value_dates_fully_parsed_last_day,
-  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 7*24) AS value_dates_fully_parsed_last_7_days,
-  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 30*24) AS value_dates_fully_parsed_last_30_days,
-  COUNTIF(NOT has_stale_archives AND age_of_earliest_parse < 90*24) AS value_dates_fully_parsed_last_90_days,
+  COUNTIF(NOT has_stale_rows AND age_of_latest_parse < 24) AS value_dates_fully_parsed_last_day,
+  COUNTIF(NOT has_stale_rows AND age_of_latest_parse < 7*24) AS value_dates_fully_parsed_last_7_days,
+  COUNTIF(NOT has_stale_rows AND age_of_latest_parse < 30*24) AS value_dates_fully_parsed_last_30_days,
+  COUNTIF(NOT has_stale_rows AND age_of_latest_parse < 90*24) AS value_dates_fully_parsed_last_90_days,
 FROM
   basic_stats
 GROUP BY datatype
