--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         run: bigquery-exporter
+        # Update this string to trigger redeployment, or delete the pod.
+        update: '2020-08-20-a'
       annotations:
         prometheus.io/scrape: 'true'
     spec:
@@ -21,6 +23,7 @@ spec:
                 "--type=gauge", "--query=/queries/bq_mlabns_ratelimit.sql",
                 "--type=gauge", "--query=/queries/bq_annotation.sql",
                 "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
+                "--type=gauge", "--query=/queries/bq_gardener.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_s2c.sql",
                 "--type=gauge", "--query=/queries/bq_billing_hourly.sql",
               ]
