--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -17,7 +17,7 @@
 --   bq_gardener_dates_partially_parsed_last_30_days -- Parsed within past 30 days.  Should be 0.
 --   bq_gardener_dates_partially_parsed_last_90_days -- Parsed within past 90 days.  Should be 0.
 --
---   Dates without rows:
+--   Dates without stale rows:
 --   bq_gardener_dates_fully_parsed_last_day         -- Parsed within last day.
 --   bq_gardener_dates_fully_parsed_last_7_days      -- Parsed within last 7 days.
 --   bq_gardener_dates_fully_parsed_last_30_days     -- Parsed within last 30 days.
