fix static config to match alert queries

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -405,8 +405,8 @@ scrape_configs:
     scrape_timeout: 50s
     params:
       'match[]':
-        - 'up{container="etl-gardener"}'
-        - 'up{container="etl-parser"}'
+        - 'up{container="etl-gardener",instance=~".*:9090"}'
+        - 'up{container="etl-parser",instance=~".*:9090"}'
     static_configs:
       - targets: ['prometheus-data-processing.{{PROJECT}}.measurementlab.net:9090']
 
