--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -409,6 +409,8 @@ scrape_configs:
         - 'up{container="etl-parser",instance=~".*:9090"}'
     static_configs:
       - targets: ['prometheus-data-processing.{{PROJECT}}.measurementlab.net:9090']
+      labels:
+          cluster: "data-processing"
 
   # Scrape config for federation.
   #
