--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -867,7 +867,7 @@ groups:
       repo: dev-tracker
       severity: ticket
     annotations:
-      summary: Reprocessing for {{ $label.datatype }} has fallen behind.
+      summary: Reprocessing for {{ $labels.datatype }} has fallen behind.
       description: Gardener runs in the "data-processing" cluster.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
 
