--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1519,17 +1519,20 @@ groups:
         status of the load balancer in the GCP console.
 
 # Platform Hardware alerts
-
+  # TODO(kinkade): this alert is only valid for R630s. R640s will have 32 or
+  # 64GB of RAM. We will need a way to distinguish between the two for the
+  # purposes of this alert.
   - alert: PlatformHardware_RamBelowExpected
     expr: |
       node_memory_MemTotal_bytes{machine=~"^mlab[1-4].[a-z]{3}[0-9]{2}.*"} / 2^20 < 15000
+        unless on(node) gmx_machine_maintenance == 1
     for: 1d
     labels:
       repo: ops-tracker
       severity: ticket
     annotations:
       summary: System RAM is below the expected minimum value.
-      description: All M-Lab machines have at least 16GB of RAM. The quantity
+      description: All M-Lab R630s have at least 16GB of RAM. The quantity
         of RAM on one or more machines has gone below 15GB, which may indicate
         a failed RAM module. Login to the machine and double check
         the hardware and/or system messages.
