--- a/k8s/data-processing/deployments/kube-state-metrics.yml
+++ b/k8s/data-processing/deployments/kube-state-metrics.yml
@@ -1,9 +1,12 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kube-state-metrics
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      application: kube-state-metrics
   template:
     metadata:
       labels:
