--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1141,15 +1141,13 @@ groups:
       dashboard: https://grafana.mlab-staging.measurementlab.net/d/tZHLFQRZk/k8s-workload-overview
 
   # If any node is NotReady for too long, fire an alert, unless the node is in
-  # lame-duck mode, GMX maintenance mode, or the scrape job for the entire node
-  # is down.
+  # lame-duck or GMX maintenance mode.
   - alert: PlatformCluster_NodeNotReady
     expr: |
       kube_node_status_condition{cluster="platform-cluster", condition="Ready", status="false"} == 1
         unless on(node) (
           kube_node_spec_taint{cluster="platform-cluster", key="lame-duck"} or
-          gmx_machine_maintenance == 1 or
-          up{job="kubernetes-nodes", cluster="platform-cluster"} == 0
+          gmx_machine_maintenance == 1
         )
     for: 1h
     labels:
