Add separate 3h instance for expensive queries (#755)
* separate 3h instance

* Merge branch 'master' into sandbox-exporter-period

* different names

--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bigquery-exporter
+  name: bigquery-exporter-3h
 spec:
   replicas: 1
   selector:
@@ -12,7 +12,7 @@ spec:
       labels:
         run: bigquery-exporter
         # Update this string to trigger redeployment, or delete the pod.
-        update: '2020-08-20-a'
+        update: '2020-10-21-a'
       annotations:
         prometheus.io/scrape: 'true'
     spec:
@@ -20,12 +20,8 @@ spec:
       - name: bigquery-exporter
         image: measurementlab/prometheus-bigquery-exporter:production-0.3
         args: [ "--project={{GCLOUD_PROJECT}}",
-                "--type=gauge", "--query=/queries/bq_mlabns_ratelimit.sql",
+                "--refresh=3h",
                 "--type=gauge", "--query=/queries/bq_annotation.sql",
-                "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
-                "--type=gauge", "--query=/queries/bq_gardener.sql",
-                "--type=gauge", "--query=/queries/bq_ndt_s2c.sql",
-                "--type=gauge", "--query=/queries/bq_billing_hourly.sql",
               ]
         ports:
         - containerPort: 9050
