Uses folded scalar for multiline alert description.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -955,7 +955,8 @@ groups:
       severity: ticket
     annotations:
       summary: The Prometheus persistent disk has less than 5% free space.
-      description: The Prometheus persistent disk has less than 5% free space.
+      description: >
+        The Prometheus persistent disk has less than 5% free space.
         Investigate filesystem usage on the VM, but most likely if this alert
         fires it means that the size of the persistent disk is too small and
         may need to be increased. GCE persistent disks can be resized, even on
