Explicitly set -reboot.bmcport for reboot-service

--- a/k8s/prometheus-federation/deployments/reboot-api.yml
+++ b/k8s/prometheus-federation/deployments/reboot-api.yml
@@ -20,6 +20,7 @@ spec:
         args:
           - "-datastore.project={{GCLOUD_PROJECT}}"
           - "-reboot.key=/var/secrets/reboot-api-ssh.key"
+          - "-reboot.bmcport=22"
           - "-auth.username={{REBOOTAPI_USER}}"
           - "-auth.password={{REBOOTAPI_PASS}}"
         volumeMounts:
