Change BMC_CredentialsNotFound to only fire after 1h

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1508,7 +1508,7 @@ groups:
     expr: |
         reboot_e2e_result{status="credentials_not_found"}
         unless on(machine) gmx_machine_maintenance == 1
-    for: 5m
+    for: 1h
     labels:
       repo: ops-tracker
       severity: ticket
