--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -208,6 +208,7 @@ disable_login_form = true
 [auth.google]
 enabled = true
 allow_sign_up = true
+allowed_domains = measurementlab.net google.com
 ;client_id = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_ID>
 ;client_secret = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_SECRET>
 scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
