Change grafana.ini to replace built-in oauth with proxied auth.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -159,16 +159,16 @@
 #################################### Users ####################################
 [users]
 # disable user signup / registration
-;allow_sign_up = true
+allow_sign_up = false
 
 # Allow non admin users to create organizations
-;allow_org_create = true
+allow_org_create = false
 
 # Set to true to automatically assign new users to the default organization (id 1)
-;auto_assign_org = true
+auto_assign_org = true
 
 # Default role new users will be automatically assigned (if disabled above is set to true)
-;auto_assign_org_role = Viewer
+auto_assign_org_role = Viewer
 
 # Background text for the user field on the login page
 ;login_hint = email or username
@@ -179,6 +179,8 @@
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
 disable_login_form = true
+oauth_auto_login = true
+signout_redirect_url = "https://<host>/oauth2/sign_out"
 
 #################################### Anonymous Auth ##########################
 [auth.anonymous]
@@ -206,15 +208,15 @@ disable_login_form = true
 
 #################################### Google Auth ##########################
 [auth.google]
-enabled = true
-allow_sign_up = true
-allowed_domains = measurementlab.net google.com northeastern.edu
+;enabled = true
+;allow_sign_up = true
+;allowed_domains = measurementlab.net google.com northeastern.edu
 ;client_id = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_ID>
 ;client_secret = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_SECRET>
-scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
-auth_url = https://accounts.google.com/o/oauth2/auth
-token_url = https://accounts.google.com/o/oauth2/token
-api_url = https://www.googleapis.com/oauth2/v1/userinfo
+;scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
+;auth_url = https://accounts.google.com/o/oauth2/auth
+;token_url = https://accounts.google.com/o/oauth2/token
+;api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
 #################################### Generic OAuth ##########################
 [auth.generic_oauth]
@@ -241,10 +243,10 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
 #################################### Auth Proxy ##########################
 [auth.proxy]
-;enabled = false
-;header_name = X-WEBAUTH-USER
-;header_property = username
-;auto_sign_up = true
+enabled = false
+header_name = X-Email
+header_property = email
+auto_sign_up = true
 ;ldap_sync_ttl = 60
 ;whitelist = 192.168.1.1, 192.168.2.1
 
