--- a/k8s/prometheus-federation/services/prometheus-tls-basic.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-basic.yml
@@ -3,7 +3,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: prometheus-tls
+  name: prometheus-tls-basic
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
