Set auth.proxy's enabled to true in grafana.ini.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -243,7 +243,7 @@ signout_redirect_url = "https://<host>/oauth2/sign_out"
 
 #################################### Auth Proxy ##########################
 [auth.proxy]
-enabled = false
+enabled = true
 header_name = X-Email
 header_property = email
 auto_sign_up = true
