Get cookie-secret from Travis rather than hardcoding it.

--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -23,7 +23,7 @@ spec:
         - --client-secret={{OAUTH_PROXY_CLIENT_SECRET}}
         - --cookie-domain={{GCLOUD_PROJECT}}.measurementlab.net
         - --cookie-refresh=1h
-        - --cookie-secret=0tcbJv2l9T1uwN0nxTSqeA==
+        - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
         - --email-domain=measurementlab.net
         - --email-domain={{GCLOUD_PROJECT}}.iam.gserviceaccount.com
         - --email-domain=northeastern.edu
