Add date filter for annotation table

--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -41,4 +41,5 @@ FROM (
   UNION ALL
     SELECT "ndt/annotation" AS datatype, MIN(Parser.Time) AS min_parse_time
     FROM   `{{PROJECT}}.raw_ndt.annotation`
+    WHERE date > date('2019-01-01')
 )
