--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -31,8 +31,7 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.ndt7`
-  WHERE
-    date > date('2019-01-01')
+  WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
     "ndt/annotation" AS datatype,
@@ -41,6 +40,7 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.annotation`
+  WHERE date > date('2019-01-01')
 ),
 
 basic_stats AS (
